--- a/src/app.css
+++ b/src/app.css
@@ -102,4 +102,32 @@
   a.link {
     @apply border-b border-current pb-0.5 text-inherit;
   }
+
+  main .sectionWrapper {
+    @apply pb-0 border-white border-b border-dashed;
+  }
+
+  main section {
+    @apply m-auto mt-4 px-4 py-4 sm:w-[95%] sm:px-4 md:w-[90%] lg:w-[80%] xl:w-[70%] 2xl:w-[60%];
+  }
+}
+
+section {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  gap: 1rem;
+}
+
+section ol {
+  font-size: 0.875rem;
+}
+section ol li {
+  font-weight: 600;
+}
+
+section ol li p {
+  line-height: 1.4rem;
+  margin-bottom: 0.25rem;
+  color: var(--color-text-secondary);
+  font-weight: 400;
 }
