--- a/src/app.css
+++ b/src/app.css
@@ -113,8 +113,9 @@
 }
 
 section {
+  position: relative;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 1rem;
 }
 
