--- a/src/app.css
+++ b/src/app.css
@@ -116,7 +116,7 @@
 		@apply border-border;
 	}
 	body {
-		@apply bg-background text-sm text-foreground;
+		@apply flex min-h-screen flex-col bg-background text-sm text-foreground;
 	}
 
 	h1 {
