--- a/src/app.css
+++ b/src/app.css
@@ -142,50 +142,14 @@
 	}
 
 	section ul li {
-		@apply ml-4 list-disc;
+		@apply ml-0 list-none pl-0;
 	}
 
 	a.link {
-		@apply border-b border-current pb-0.5 text-inherit;
+		@apply cursor-pointer border-b border-current pb-0.5 text-inherit;
 	}
 
-	main .sectionWrapper {
-		@apply border-b border-dashed border-white pt-6 pb-6;
+	ul {
+		@apply list-none space-y-2;
 	}
-
-	main .sectionWrapper:last-child {
-		@apply border-0 pb-0;
-	}
-
-	main section {
-		@apply m-auto mt-4 px-4 py-4 sm:w-[95%] sm:px-4 md:w-[90%] lg:w-[80%] xl:w-[70%] 2xl:w-[60%];
-	}
-}
-
-.sectionWrapper section {
-	position: relative;
-	display: grid;
-	grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-	gap: 1rem;
-}
-
-section ol {
-	font-size: 0.875rem;
-}
-section ol li {
-	font-weight: 600;
-}
-
-section ol li p {
-	line-height: 1.4rem;
-	margin-bottom: 0.25rem;
-	color: var(--color-text-secondary);
-	font-weight: 400;
-}
-
-.glossary-term:hover {
-	border-bottom: 1px dotted rgba(255, 255, 255, 1);
-	padding-bottom: 1px;
-	cursor: help;
-	position: relative;
 }
