--- a/src/app.css
+++ b/src/app.css
@@ -127,22 +127,13 @@
 		@apply mb-2 text-xl font-semibold tracking-tight;
 	}
 
+	b,
 	strong {
 		@apply font-medium;
 	}
 
-	p,
-	section ul,
-	section ol {
-		@apply leading-7;
-	}
-
-	section ol li {
-		@apply ml-4 list-decimal;
-	}
-
-	section ul li {
-		@apply ml-0 list-none pl-0;
+	p {
+		@apply leading-relaxed;
 	}
 
 	a.link {
@@ -150,6 +141,15 @@
 	}
 
 	ul {
-		@apply list-none space-y-2;
+		@apply list-outside pl-4 leading-relaxed font-thin;
+		list-style-type: square;
+	}
+
+	ol {
+		@apply list-outside list-decimal pl-4 leading-relaxed font-thin;
+	}
+
+	li {
+		@apply mb-2 pl-0;
 	}
 }
